feat: Add comments and font awesome script

--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
+<!-- BrainPower - Home Page -->
+<!-- Document Type: HTML -->
 <!DOCTYPE html>
+<!-- HTML Start with Language set to english -->
 <html lang="en">
+<!-- Head Start with meta data -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to stylesheet and page title -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+<!-- Head End -->
+<!-- Body Start -->
 <body>
     
+    <!-- Font awesome script -->
+    <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
+    <!-- Link to Javascript -->
     <script src="assets/js/script.js"></script>
 </body>
+<!-- Body End -->
 </html>
+<!-- HTML End -->
