feat: Add basic body structure and main heading

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 <!-- Head End -->
 <!-- Body Start -->
 <body>
-    
+    <!-- Page Header Start -->
+    <header></header>
+    <!-- Page Header End -->
+    <!-- Main Start -->
+    <main>
+        <h1>Numbers Memory Game</h1>
+    </main>
+    <!-- Main End -->
+    <!-- Page Footer Start -->
+    <footer></footer>
+    <!-- Page Footer End -->
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
     <!-- Link to Javascript -->
