feat: Change button id name and add hover

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <!-- Instruction Button -->
-            <button id="instruction"><b>Instruction</b></button>
+            <button id="btn-instruction"><b>Instruction</b></button>
         </div>
     </header>
     <!-- Page Header End -->
