feat: Add basic structure to game main body

--- a/index.html
+++ b/index.html
@@ -32,7 +32,24 @@
     <!-- Page Header End -->
     <!-- Main Start -->
     <main>
-        <h1>Numbers Memory Game</h1>
+        <h1 id="game-title">Numbers Memory Game</h1>
+        <section id="game-area">
+            
+            <div>Number Generator</div>
+            <div>Anwser</div>
+            <div>Result</div>
+            <div>
+                <button>Submit</button>
+                <button>Next</button>
+            </div>
+            <div>Level</div>
+            <div>Time</div>
+            <div>Score</div>
+            <div>Success Rate</div>
+            <div>Best Score</div>
+            <button>New Game</button>
+
+        </section>
     </main>
     <!-- Main End -->
     <!-- Page Footer Start -->
