feat: Add basic style to game buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <!-- Instruction Button -->
-            <button id="btn-instruction"><b>Instruction</b></button>
+            <button data-type="instruction" id="btn-instruction"><b>Instruction</b></button>
         </div>
     </header>
     <!-- Page Header End -->
@@ -38,16 +38,16 @@
             <div id="memory-box">Number Generator</div>
             <div id="answer-box">Anwser</div>
             <div id="result">Result</div>
-            <div class="btn">
-                <button class="btn-submit">Submit</button>
-                <button class="btn-next">Next</button>
+            <div>
+                <button data-type="submit" class="btn btn-small">Submit</button>
+                <button data-type="next" class="btn btn-small">Next</button>
             </div>
             <div id="levels">Level</div>
             <div id="timer">Time</div>
             <div id="score">Score</div>
             <div id="sucess-rate">Success Rate</div>
             <div id="best-score">Best Score</div>
-            <button class="btn-new-game">New Game</button>
+            <button data-type="new-game" class="btn">New Game</button>
 
         </section>
     </main>
