feat: Add basic styles to common div sections

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             
             <div id="memory-box">Number Generator</div>
             <div id="answer-box">Anwser</div>
-            <div id="result">Result</div>
+            <div id="result" class="div">Result</div>
             <div>
                 <button data-type="submit" class="btn btn-small">Submit</button>
                 <button data-type="next" class="btn btn-small">Next</button>
             </div>
-            <div id="levels">Level</div>
-            <div id="timer">Time</div>
-            <div id="score">Score</div>
-            <div id="sucess-rate">Success Rate</div>
-            <div id="best-score">Best Score</div>
+            <div id="levels" class="div">Level</div>
+            <div id="timer" class="div">Time</div>
+            <div id="score" class="div">Score</div>
+            <div id="sucess-rate" class="div">Success Rate</div>
+            <div id="best-score" class="div">Best Score</div>
             <button data-type="new-game" class="btn">New Game</button>
 
         </section>
