bug: Fix and change default vaules

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="levels" class="div">Level</div>
             <div id="timer" class="div">Time</div>
             <div id="score" class="div">Score</div>
-            <div id="sucess-rate" class="div">Success Rate</div>
+            <div id="success-rate" class="div">Success Rate</div>
             <div id="best-score" class="div">Best Score</div>
             <button onmouseover="btnOverIn('new-game');" onmouseout="btnOverOut('new-game');" id="new-game" data-type="new-game" class="btn">New Game</button>
 
