feat: Add div structure for basic message modal

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
             <div id="best-score" class="div">Best Score</div>
             <button onmouseover="btnOverIn('new-game');" onmouseout="btnOverOut('new-game');" id="new-game" data-type="new-game" class="btn">New Game</button>
 
+            <!-- Message Modal -->
+            <div id="msg-modal" class="msg-modal">
+                <!-- Modal content -->
+                <div class="msg-modal-content">
+                    <div class="msg-modal-header">
+                        <span class="msg-modal-close">&times;</span>
+                        <h2 class="msg-modal-title">Title</h2>
+                    </div>
+                    <div class="msg-modal-body">Body</div>
+                </div>
+            </div>
+
         </section>
     </main>
     <!-- Main End -->
