bug: Delete buttons mouse over and out events

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
             <div id="answer-box">Anwser</div>
             <div id="result" class="div">Result</div>
             <div>
-                <button onmouseover="btnOverIn('submit');" onmouseout="btnOverOut('submit');" id="submit" data-type="submit" class="btn btn-small">Submit</button>
-                <button onmouseover="btnOverIn('next');" onmouseout="btnOverOut('next');" id="next" data-type="next" class="btn btn-small">Next</button>
+                <button id="submit" data-type="submit" class="btn btn-small">Submit</button>
+                <button id="next" data-type="next" class="btn btn-small">Next</button>   
             </div>
             <div id="levels" class="div">Level</div>
             <div id="timer" class="div">Time</div>
             <div id="score" class="div">Score</div>
             <div id="success-rate" class="div">Success Rate</div>
             <div id="best-score" class="div">Best Score</div>
-            <button onmouseover="btnOverIn('new-game');" onmouseout="btnOverOut('new-game');" id="new-game" data-type="new-game" class="btn">New Game</button>
+            <button id="new-game" data-type="new-game" class="btn">New Game</button>
 
             <!-- Message Modal -->
             <div id="msg-modal" class="msg-modal">
