feat: Add basic structure to the game area

--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
         <h1 id="game-title">Numbers Memory Game</h1>
         <section id="game-area">
             
-
+            <div>
+                <h2 class = "manual-title">Description</h2>
+                <ul class = "manual-list">
+                    <li>List</li>
+                </ul>
+                <h2 class = "manual-title">How to Play</h2>
+                <ul class = "manual-list">
+                    <li>List</li>
+                </ul>
+                <h2 class = "manual-title">Scoring System</h2>
+                <ul class = "manual-list">
+                    <li>List</li>
+                </ul>
+                <a href="game.html">Play Game</a>
+            </div>
 
         </section>
     </main>
