--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <img id="logo-img" src="assets/images/home-logo.png" alt="company logo">
                 </a>
             </div>
-            <!-- Instruction Button -->
-            <button data-type="instruction" id="btn-instruction"><b>Instruction</b></button>
+            <!-- Link to game page -->
+            <a href="game.html" id="btn-game"><b>Play Game</b></a>
         </div>
     </header>
     <!-- Page Header End -->
