feat: Add style to elements in game area

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <ul class = "manual-list">
                     <li>List</li>
                 </ul>
-                <a href="game.html">Play Game</a>
+                <a href="game.html" id = "btn-play-game"><b>Play Game</b></a>
             </div>
 
         </section>
