feat: Add script to index page and add lists

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <h1 id="game-title">Numbers Memory Game</h1>
         <section id="game-area">
-            
+            <!-- Manual for the game Start -->
             <div>
                 <h2 class = "manual-title">Description</h2>
                 <ul class = "manual-list">
@@ -54,7 +54,7 @@
                 </ul>
                 <a href="game.html" id = "btn-play-game"><b>Play Game</b></a>
             </div>
-
+            <!-- Manual for the game End -->
         </section>
     </main>
     <!-- Main End -->
@@ -90,7 +90,7 @@
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
     <!-- Link to Javascript -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script-index.js"></script>
 </body>
 <!-- Body End -->
 </html>
