maint: Rename file script.js to script-game.js

--- a/game.html
+++ b/game.html
@@ -100,7 +100,7 @@
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
     <!-- Link to Javascript -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script-game.js"></script>
 </body>
 <!-- Body End -->
 </html>
