--- a/index.html
+++ b/index.html
@@ -40,18 +40,22 @@
         <section id="game-area">
             <!-- Manual for the game Start -->
             <div>
+                <!-- Description about the game -->
                 <h2 class = "manual-title">Description</h2>
                 <ul class = "manual-list">
                     <li>List</li>
                 </ul>
+                <!-- Instruction on how to play the game -->
                 <h2 class = "manual-title">How to Play</h2>
                 <ul class = "manual-list">
                     <li>List</li>
                 </ul>
+                <!-- Information about the scoring system -->
                 <h2 class = "manual-title">Scoring System</h2>
                 <ul class = "manual-list">
                     <li>List</li>
                 </ul>
+                <!-- Link to the game page -->
                 <a href="game.html" id = "btn-play-game"><b>Play Game</b></a>
             </div>
             <!-- Manual for the game End -->
@@ -69,7 +73,7 @@
                 aria-label="Open email client in a new window.">info@brainpower.co.uk</a>
         </div>
         <!-- Contact details End -->
-        <!-- Follow us Start on social networks in new window -->
+        <!-- Find us Start on social networks in new window -->
         <div class="social-networks">
             <span><strong>Find us on:</strong></span>
             <ul>
@@ -84,7 +88,7 @@
                 </li>
             </ul>
         </div>
-        <!-- Follow us End -->
+        <!-- Find us End -->
     </footer>
     <!-- Page Footer End -->
     <!-- Font awesome script -->
