--- a/game.html
+++ b/game.html
@@ -1,9 +1,10 @@
-<!-- BrainPower - Home Page -->
+<!-- BrainPower - Game Page -->
 <!-- Document Type: HTML -->
 <!DOCTYPE html>
 <!-- HTML Start with Language set to english -->
 <html lang="en">
 <!-- Head Start with meta data -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
 </head>
 <!-- Head End -->
 <!-- Body Start -->
+
 <body>
     <!-- Page Header Start -->
     <header>
@@ -37,35 +39,49 @@
     <!-- Main Start -->
     <main>
         <h1 id="game-title">Numbers Memory Game</h1>
+        <!-- Game Area Start -->
         <section id="game-area">
-            
+            <!-- Squares for both number and answer -->
             <div id="memory-box">Number Generator</div>
             <div id="answer-box">Anwser</div>
+            <!-- Message area -->
             <div id="result" class="div">Result</div>
+            <!-- Buttons for Submit answer and Next level -->
             <div>
                 <button id="submit" data-type="submit" class="btn btn-small">Submit</button>
-                <button id="next" data-type="next" class="btn btn-small">Next</button>   
+                <button id="next" data-type="next" class="btn btn-small">Next</button>
             </div>
+            <!-- Level counter -->
             <div id="levels" class="div">Level</div>
+            <!-- Timer -->
             <div id="timer" class="div">Time</div>
+            <!-- Score -->
             <div id="score" class="div">Score</div>
+            <!-- Sucees Rate -->
             <div id="success-rate" class="div">Success Rate</div>
+            <!-- Best Score -->
             <div id="best-score" class="div">Best Score</div>
+            <!-- Button for New Game -->
             <button id="new-game" data-type="new-game" class="btn">New Game</button>
-
-            <!-- Message Modal -->
+            <!-- Message Modal Start-->
             <div id="msg-modal" class="msg-modal">
-                <!-- Modal content -->
+                <!-- Modal Box Start -->
                 <div class="msg-modal-content">
+                    <!-- Header Content -->
                     <div class="msg-modal-header">
+                        <!-- Close button -->
                         <span class="msg-modal-close">&times;</span>
+                        <!-- Box Title -->
                         <h2 class="msg-modal-title">Title</h2>
                     </div>
+                    <!-- Body content -->
                     <div class="msg-modal-body">Body</div>
                 </div>
+                <!-- Modal Box End -->
             </div>
-
+            <!-- Message Modal End -->
         </section>
+        <!-- Game Area End -->
     </main>
     <!-- Main End -->
     <!-- Page Footer Start -->
@@ -79,7 +95,7 @@
                 aria-label="Open email client in a new window.">info@brainpower.co.uk</a>
         </div>
         <!-- Contact details End -->
-        <!-- Follow us Start on social networks in new window -->
+        <!-- Contact us Start on social networks in new window -->
         <div class="social-networks">
             <span><strong>Find us on:</strong></span>
             <ul>
@@ -94,7 +110,7 @@
                 </li>
             </ul>
         </div>
-        <!-- Follow us End -->
+        <!-- Contact us End -->
     </footer>
     <!-- Page Footer End -->
     <!-- Font awesome script -->
