maint: Update media query max 309

--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
             <div class="topnav">
                 <div id="myLinks">
                     <a href="index.html">Home</a>
-                    <a href="game.html" class="active">Numbers Memory Game</a>
+                    <a href="game.html" class="active">Play Numbers Memory Game</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="menuBar()" aria-label="Menu Bar">
                     <i class="fa fa-bars"></i>
