--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="topnav">
                 <div id="myLinks">
                     <a href="index.html" class="active">Home</a>
-                    <a href="game.html">Numbers Memory Game</a>
+                    <a href="game.html">Play Numbers Memory Game</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="menuBar()" aria-label="Retrun to Home Page">
                     <i class="fa fa-bars"></i>
