--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="index.html" class="active">Home</a>
                     <a href="game.html">Play Numbers Memory Game</a>
                 </div>
-                <a href="javascript:void(0);" class="icon" onclick="menuBar()" aria-label="Retrun to Home Page">
+                <a href="javascript:void(0);" class="icon" onclick="menuBar()" aria-label="Menu Bar">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
